Avalara Fullqa/src/Sertifi E-Sign for Salesforce.com/objects/TestContract__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sertifi EContracts</relationshipLabel>
        <relationshipName>Sertifi_EContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When sending from the Case standard object, this will be populated.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Sertifi EContracts</relationshipLabel>
        <relationshipName>Sertifi_EContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sertifi EContracts</relationshipLabel>
        <relationshipName>Sertifi_EContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ContractID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Sertifi EContracts</relationshipLabel>
        <relationshipName>Sertifi_EContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomLinkID__c</fullName>
        <label>CustomLinkID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declined__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of documents that signers declined to sign.</inlineHelpText>
        <label>Declined</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Invite__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Yes</description>
        <label>Email Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <inlineHelpText>Date when unsigned documents are expired and can no longer be signed.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of unsigned documents that have been expired and can no longer be signed.</inlineHelpText>
        <label>Expired</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LandingPageLink__c</fullName>
        <label>View Stream</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Sertifi EContracts</relationshipLabel>
        <relationshipName>Sertifi_EContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of documents that have not signed.</inlineHelpText>
        <label>Open</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Sertifi_EContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of payments or authorizations that have been processed.</inlineHelpText>
        <label>Paid</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partiall__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of documents that have received some, but not all signatures.</inlineHelpText>
        <label>Partially Signed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Redirect_On_Signing_Page_Action__c</fullName>
        <description>Url to which the user is redirected after (sign, decline, reassign) actions on the signing page.</description>
        <label>Redirect On Signing Page Action</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Settings__c</fullName>
        <label>Settings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_Type__c</fullName>
        <label>Sign Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronically</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Print ,Sign, and Fax</fullName>
                </value>
                <value>
                    <fullName>Either Electronically or Print,Sign, and Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of documents that have been fully signed by all parties.</inlineHelpText>
        <label>Signed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of payments or authorizations that have not been collected.</inlineHelpText>
        <label>Unpaid</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sertifi EContract</label>
    <listViews>
        <fullName>Contracts_with_Payments</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Paid__c</columns>
        <columns>Unpaid__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Paid__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Unpaid__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Contracts with Payments</label>
    </listViews>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sertifi EContracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>